--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-sharp": "^2.2.8",
     "gatsby-source-wordpress": "^3.1.9",
     "gatsby-transformer-sharp": "^2.2.4",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1"
